--- a/tidb-inventory.ini
+++ b/tidb-inventory.ini
@@ -1,3 +1,23 @@
+# packet.net instance c2.medium.x86
+# 
+#Hardware Specs
+
+#    CPU
+#    24 Physical Cores @ 2.2 GHz
+#    (1 x AMD EPYC 7401P)
+#    Memory
+#    64 GB of ECC RAM
+#    Boot Drives
+#    2 x 120 GB boot SSD
+#    (One for the OS, another free to use)
+#    Storage
+#    960 GB of SSD
+#    (2 x 480 GB)
+#    Network
+#    20 Gbps Bonded Network
+#    (2 x Mellanox 10Gbps w/ LACP)
+
+
 ## TiDB Cluster Part
 [tidb_servers]
 10.99.239.15
